<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/appBackground">

    <TextView
        android:id="@+id/activity_main_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_text_view"
        android:textSize="20dp"
        android:fontFamily="monospace"
        android:textColor="@color/appFontColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/activity_main_button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_button_start"
        android:textSize="25dp"
        android:fontFamily="monospace"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/activity_main_text_view"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/activity_main_button_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_button_connexion"
        android:textSize="25dp"
        android:fontFamily="monospace"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/activity_main_button_start"
        android:layout_marginTop="25dp"
        android:enabled="false"/>

    <Button
        android:id="@+id/activity_main_button_deconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_button_deconnexion"
        android:textSize="25dp"
        android:fontFamily="monospace"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/activity_main_button_connexion"
        android:layout_marginTop="25dp"
        android:enabled="false"/>

    <Button
        android:id="@+id/activity_main_button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_button_stop"
        android:textSize="25dp"
        android:fontFamily="monospace"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/activity_main_button_deconnexion"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/activity_main_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/activity_main_edit_text"
        android:textColor="@color/appBackground"
        android:layout_below="@id/activity_main_button_stop"
        android:layout_marginTop="50dp"
        android:background="@color/appFontColor"/>

</RelativeLayout>